# cargo-nuget

./: Cargo.toml
src/: main.rs
