[package]
name = "cargo-nuget"
version = "0.1.0"
authors = ["mayowa <mayowa@dipolediamond.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
cargo_toml = "0.8"
surf = "1.0"
async-std="1.5"
futures = "0.3"
zip = "0.5"
thiserror = "1.0"
anyhow = "1.0"
[package.metadata.android]
foo = "bar"

[package.metadata.nuget_dependencies]
"Win2D.uwp" = "1.25.0"
